--- a/src/App.css
+++ b/src/App.css
@@ -6,13 +6,14 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  cursor: none !important;
 }
 
 body {
   height: 100vh;
   width: 100%;
-  background: #f1f1f1;
-  cursor: none;
+  background: #212121;
+  display: flex;
 }
 
 .cursor {
@@ -20,12 +21,32 @@ body {
   height: 35px;
   width: 35px;
   border-radius: 50%;
-  mix-blend-mode: difference;
+  mix-blend-mode: difference !important;
   transform: translate(-50%, -50%);
   pointer-events: none;
   background: rgb(255, 255, 255);
+  z-index: 5000;
 }
 
 .cursor.hover {
   transform: translate(-50%, -50%) scale(4);
 }
+
+.text-title {
+    font-family: "Poppins", sans-serif;
+    font-weight: 500;
+    font-size: 45px;
+    font-style: italic;
+    color: white;
+    margin-left: 5vh;
+}
+
+.text-subtitle {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 300;
+  font-size: 20px;
+  color: white;
+  margin-left: 1vh;
+  margin-top: 1vh;
+}
+
