--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,52 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.App {
+  text-align: center;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+*, *::before, *::after {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  cursor: none !important;
 }
+
+body {
+  height: 100vh;
+  width: 100%;
+  background: #212121;
+  display: flex;
+}
+
+.cursor {
+  position: absolute;
+  height: 35px;
+  width: 35px;
+  border-radius: 50%;
+  mix-blend-mode: difference !important;
+  transform: translate(-50%, -50%);
+  pointer-events: none;
+  background: rgb(255, 255, 255);
+  z-index: 5000;
+}
+
+.cursor.hover {
+  transform: translate(-50%, -50%) scale(4);
+}
+
+.text-title {
+    font-family: "Poppins", sans-serif;
+    font-weight: 500;
+    font-size: 45px;
+    font-style: italic;
+    color: white;
+    margin-left: 5vh;
+}
+
+.text-subtitle {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 300;
+  font-size: 20px;
+  color: white;
+  margin-left: 1vh;
+  margin-top: 1vh;
+}
+
