--- a/src/Views/LoginForm/LoginView.css
+++ b/src/Views/LoginForm/LoginView.css
@@ -8,8 +8,9 @@
   align-items: center;
   height: 100vh;
   width: 100vw;
-  background: url(../../../public/unnamed.jpg) no-repeat;
-  background-size: cover;
+  background: #212121;
+  /* background: url(../../../public/unnamed.jpg) no-repeat;
+  background-size: cover; */
 }
 
 .wrapper {
