--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,23 @@ body {
   z-index: 5000;
 }
 
+.landingImage {
+  position: relative;
+  width: 100vw;
+  height: 60vh;
+  z-index: -1;
+  border-bottom-left-radius: 999%;
+  border-bottom-right-radius: 80%;
+  overflow: hidden;
+  background-image: 
+    linear-gradient(190deg, rgba(255, 255, 255, 0) 0%, #212121 55%),
+    url(https://i.pinimg.com/originals/38/c8/8a/38c88afe39a2a996a176d94c555f8bdf.jpg);
+  background-size: auto, cover;
+  background-position: bottom, center;
+  background-repeat: no-repeat;
+  margin-bottom: -200px;
+}
+
 .cursor.hover {
   transform: translate(-50%, -50%) scale(4);
 }
@@ -50,3 +67,144 @@ body {
   margin-top: 1vh;
 }
 
+.slogan {
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  color: #fff;
+  justify-content: start;
+  text-align: justify;
+  font-size: 58px;
+  line-height: 1;
+}
+
+.internText {
+  font-family: "Poppins", sans-serif;
+  color: white;
+  justify-content: start;
+  text-align: justify;
+  font-size: 13px;
+  font-weight: 300;
+}
+
+.buttonLanding {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: fit-content;
+  padding: 10px 40px;
+  background-color: white;
+  color: black;
+  border: none;
+  border-radius: 30px;
+  font-size: 18px;
+  font-weight: 600;
+  cursor: pointer;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.buttonLanding:hover {
+  background-color: black;
+  color: white;
+}
+@keyframes blink {
+  0%, 100% {
+    opacity: 10;
+  }
+  20% {
+    opacity: 0;
+  }
+}
+
+.blinking {
+  animation: blink 1s infinite;
+}
+
+
+
+.box {
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding-top: 35px;
+  margin-right: 100px;
+  width: 100px;
+  height: 70px;
+
+}
+
+.card {
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  width: 200px;
+  height: 320px;
+  background: #C6C6D0;
+  color: #212121;
+  box-shadow: inset 0 0 0 4px #212121;
+  transition: .6s 0.4s;
+  cursor: pointer;
+}
+
+.border {
+  position: absolute;
+  inset: 0;
+}
+
+.border line {
+  stroke-width: 4px;
+  stroke: #C6C6D0;
+  fill: none;
+  transition: .6s ease-in-out;
+}
+
+.border line.top,
+.border line.bottom {
+  stroke-dasharray: 200;
+}
+
+.border line.left,
+.border line.right {
+  stroke-dasharray: 320;
+}
+
+.logo {
+  width: 50%;
+  margin: auto;
+  fill: #212121;
+  transition: .6s;
+  opacity: 0.9;
+}
+
+.card:hover {
+  background-color: transparent;
+  transition-delay: 0s;
+}
+
+.card:hover .border line {
+  transition-delay: 0.1s;
+}
+
+.card:hover .border line.top {
+  transform: translateX(-400px);
+}
+
+.card:hover .border line.bottom {
+  transform: translateX(400px);
+}
+
+.card:hover .border line.left {
+  transform: translateY(640px);
+}
+
+.card:hover .border line.right {
+  transform: translateY(-640px);
+}
+
+.card:hover .logo {
+  transition-delay: 0s;
+  transform: scale(1.1);
+  fill: #C6C6D0;
+  filter: drop-shadow( 0 0 30px #C6C6D080);
+  opacity: 0.9;
+}
