--- a/src/index.css
+++ b/src/index.css
@@ -187,10 +187,12 @@ body {
 }
 
 .grafico {
-  width: 63%;
+  width: 100%;
   height: 100%;
+  background-size: auto, cover;
+  background-repeat: no-repeat;
   background-position: center;
-  background: url("../public/grafico.png");
+  background-image: url("../public/grafico.png");
 }
 
 .footer {
