--- a/src/index.css
+++ b/src/index.css
@@ -101,7 +101,6 @@ body {
 }
 
 .buttonLanding {
-  margin-bottom: 15vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -110,7 +109,7 @@ body {
   background-color: white;
   color: black;
   border: none;
-  border-radius: 30px;
+  border-radius: 20px;
   font-size: 18px;
   font-weight: 600;
   cursor: pointer;
@@ -193,6 +192,23 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   background-image: url("../public/grafico.png");
+}
+
+.map {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  border-radius: 20px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-image: url("../public/map.png");
+}
+
+.mapPerson {
+  margin-left: 4vw;
+  height: 70%;
 }
 
 .footer {
