--- a/src/Views/HomeView/HomeView.css
+++ b/src/Views/HomeView/HomeView.css
@@ -7,28 +7,91 @@
 }
 
 .vendas {
-    height: auto;
-    max-width: 77%;
-    object-fit: cover;
+  height: auto;
+  max-width: 77%;
+  object-fit: cover;
 }
 
 .buttonHome {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: fit-content;
-    padding: 10px 40px;
-    background-color: white;
-    color: black;
-    border: none;
-    border-radius: 20px;
-    font-size: 18px;
-    font-weight: 600;
-    cursor: pointer;
-    transition: background-color 0.3s ease, color 0.3s ease;
-  }
-  
-  .buttonHome:hover {
-    background-color: black;
-    color: white;
-  }
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: fit-content;
+  padding: 10px 40px;
+  background-color: white;
+  color: black;
+  border: none;
+  border-radius: 20px;
+  font-size: 18px;
+  font-weight: 600;
+  cursor: pointer;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.buttonHome:hover {
+  background-color: black;
+  color: white;
+}
+
+
+.text-title {
+  font-family: "Poppins", sans-serif;
+  font-weight: 300;
+  font-size: 30px;
+  font-style: italic;
+  color: white;
+}
+
+.text-subtitle {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 300;
+  font-size: 20px;
+  color: white;
+  margin-left: 1vh;
+  margin-top: 1vh;
+}
+
+.card-green {
+  color: green;
+}
+
+.card-red {
+  color: red;
+}
+
+.status {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 300;
+  font-size: 20px;
+  color: white;
+  margin-left: 75%;
+  margin-top: 1vh;
+}
+
+.message {
+  position: absolute;
+  top: 60px;
+  right: 20px;
+  background-color: rgba(0, 0, 0, 0.8);
+  color: white;
+  padding: 10px;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  display: none;
+}
+
+.card:hover+.message {
+  display: block;
+}
+
+.text-user {
+  color: white;
+  text-align: start;
+  margin-right: auto;
+}
+
+.text-card {
+  font-family: "Poppins", sans-serif;
+  font-size: 17px;
+  font-weight: 600;
+}
