fix image and added the download of relatorio

--- a/src/index.css
+++ b/src/index.css
@@ -136,7 +136,7 @@ body {
     background-image: url("https://i.pinimg.com/originals/38/c8/8a/38c88afe39a2a996a176d94c555f8bdf.jpg");
   }
   33.33% {
-    background-image: url("https://th.bing.com/th/id/OIP.wWILW2n_Vfdim_1g30B_KgHaEK?w=551&h=310&rs=1&pid=ImgDetMain");
+    background-image: url("https://miro.medium.com/v2/resize:fit:1400/1*jVOsWpZ4ShtGrTq2cstzAg.png");
   }
   66.66% {
     background-image: url("https://theadfocus.com/wp-content/uploads/2022/03/Times-Square-andreas-m-unsplash-scaled.jpg");
